# tren

./: .gitignore  .project  ARCHIVED_SWITCHES.md  CLAUDE.md  README.md  dsl-help.html  host_problem.txt  index.html  inspector-window.txt  milestone.txt  nextSteps.txt  nextStepsREST.txt  outoftime.txt  package-lock.json  package.json  rest-api.txt  resumeTasks.txt  test-features.txt
docs/: architecture.md  connection-points.md  layout-dsl.md  rest-api.md  technical-decisions.md  track-dimensions.md  track-system.md  trains.md
layouts/: flex.txt  layout01.txt  layout02.txt  layout03.txt  layout04.txt  sample01.txt  sample02.txt  samples.txt  simpler.txt
layouts/examples/: crossConnect.txt  semaphore.txt
layouts/underDevelopment/: crossTest.txt  example-bump.txt  layout01.txt  layout04.txt  layout05.txt  sample03.txt  samples.txt
publish/: Tren_0.1.0_aarch64.dmg  index.html
publish/assets/: index-97swiUIA.css  index-BIWE1wVr.js  index-BOIRjVxN.js  index-BVxZ6eDn.js  index-BaSw2BZl.css  index-BbNlNW0D.js  index-CCf2G_FT.css  index-CEsVvxnq.js  index-CMHvxrrm.js  index-Cn1UAkDS.js  index-CtVXK9tD.js  index-Cx50pYgK.js  index-DJhvLtKR.js  index-DqhSSljq.js  index-DtXbGrDX.js  index-Dz7d3l5V.css  index-GP9LYBAK.js  index-IU6NJaQ8.css
publish/debian/: README.md  build.sh
publish/macos/: README.md  build.sh  tren.rb
src/: main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/core/: archetypes.ts  lock-manager.ts  logger.ts  simulation.ts  train-helpers.ts  train-movement.ts  types.ts
use cases/: uc01.txt  uc02.txt  usecase01.txt
(+28 files in other folders)
